force-app/main/default/objects/LeaveRequest__c/LeaveRequest__c.object-meta.xml
<CustomObject>
    <label>LeaveRequest</label>
    <nameField>
        <label>LeaveRequest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaveRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>