force-app/main/default/objects/LeaveRequest__c/fields/Manager_Comment__c.field-meta.xml
<CustomField>
    <fullName>Manager_Comment__c</fullName>
    <inlineHelpText>Comments of manager will be shown here.</inlineHelpText>
    <label>Manager Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>