force-app/main/default/objects/LeaveRequest__c/fields/Reson__c.field-meta.xml
<CustomField>
    <fullName>Reson__c</fullName>
    <label>Reson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>